# yvyra

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: code-tests.yml  pages.yml
docs/: GUIDE.md
examples/: anatolian.yaml  anatolian_diagnostics.yaml  anatolian_full.yaml  asymmetric_tutorial.yaml  celtic_asymmetric.yaml  first_analysis.yaml  greek_dialects.yaml  manuscript_weights.yaml  multistate.yaml  pottery_diagnostics.yaml  romance_named_states.yaml  uncertain_tocharian.yaml
src/: CMakeLists.txt  bayes.c  bayes.h  charweight.c  charweight.h  command.c  command.h  config.h.cmake  diagnostics.c  diagnostics.h  likelihood.c  likelihood.h  mcmc.c  mcmc.h  model.c  model.h  proposal.c  proposal.h  sumpt.c  sumpt.h  utils.c  utils.h  yamlcmd.c  yamlcmd.h  yamlparser.c  yamlparser.h
testing/: anatolian_full.nex  cross_validate.py  crossval_multistate.nex  crossval_simple.nex  crossval_usertype.nex  crossval_variable.nex  expected_ranges.json  mk_real.nex  mk_smoke.nex  mk_synthetic.nex  run_crossval.sh  run_tests.py  smoke_test.sh  test1.nex  test2.nex  test_anatolian.yaml  test_estimated_weights.yaml  test_simple.yaml  test_templates.yaml
web/: build-wasm.sh  guide-content.js  index.html  worker.js  yvyra.js  yvyra.wasm
